separation audio spat + creation visualizer

--- a/etudePraetorian/.gitignore
+++ b/etudePraetorian/.gitignore
@@ -3,3 +3,5 @@ etudePraetorian/Backups
 etudePraetorian/Media
 etudePraetorian/Results/*
 etudePraetorian/*.rpp
+etudePraetorian/newSeq
+etudePraetorian/newSeq/*
