Remove newSeq files from index (should now be ignored)

--- a/etudePraetorian/.gitignore
+++ b/etudePraetorian/.gitignore
@@ -3,4 +3,4 @@ etudePraetorian/Backups
 etudePraetorian/Media
 etudePraetorian/Results/*
 etudePraetorian/*.rpp
-etudePraetorian/newSeq
+etudePraetorian/newSeq/
